...
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="40dp"
        android:onClick="onEnterClick"
        android:text="ENTER"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cancel_class_button"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/class_size_label" />

    <Button
        android:id="@+id/cancel_class_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="56dp"
        android:onClick="onCancelClick"
        android:text="CANCEL"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/enter_class_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/subject_label"
...
