...
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/choose_session_label"
        app:layout_constraintVertical_bias="0.859" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="38dp"
        android:clickable="true"
...
